Compilers construction/Solutions/compiler-construction-xi-2/tests/pracownia2/error/071_procedure_used_as_function_whilecond.xi
f()

g()
{
    while f() {
    }
}
//@PRACOWNIA
//@should_not_typecheck
